Prime Membership Form added
The trainers can manage their Prime Membership in their dashboard now.
More info to be put in the dashboard in the future (trainer's created content, some stats, etc)

--- a/staticfiles/styles/profile-dashboard.css
+++ b/staticfiles/styles/profile-dashboard.css
@@ -8,5 +8,16 @@
 .dashboard-content {
     display:flex;
     flex-direction: column;
+    height:80vh;
     width:800px;
+    /*justify-content: space-between;*/
+}
+
+#prime-deactivate {
+    text-decoration: none;
+    color:red;
+    font-size:14px;
+}
+#prime-deactivate:hover {
+    color:darkred;
 }
