--- a/templates/content/articles/articles-list.html
+++ b/templates/content/articles/articles-list.html
@@ -13,7 +13,7 @@
         </div>
     {% endif %}
     {% for article in articles %}
-        <div class="col-5 regular-article">
+        <div class="col-5 mt-3 regular-article">
             <div class="card">
               <div class="card-header">
                   {% for category in article.category %}
@@ -21,11 +21,13 @@
                       {% endfor %}
               </div>
               <div class="card-body">
-                <h5 class="card-title"><a href="{% url 'article details' pk=article.pk %}">{{ article.heading|capitalize_each_word }}</a></h5>
+                <h3 class="card-title article-heading"><a href="{% url 'article details' pk=article.pk %}">{{ article.heading|capitalize_each_word }}</a></h3>
                 <p class="card-text">{{ article.abstract }} plus some additional text and lorem ipsum that is
                 supposed to take some extra text</p>
-                  <img src="{{ article.article_image }}" alt="" class="article-list-thumbnail">
-              </div>
+                  <div style="display:flex; justify-content: center">
+                      <img src="{{ article.article_image }}" alt="" class="article-list-thumbnail" style="justify-self:center">
+                  </div>
+                  </div>
               <div class="card-footer text-muted">
                 {{ article.publication_date|date:'d M y' }}
               </div>
@@ -35,7 +37,7 @@
                 {% if article.author.trainerprofile.prime_membership %}
                     <i class="fa-solid fa-award" style="color:green"></i>
                 {% endif %}
-                 <span><img src="{{ article.author.profile_picture }}" height="50px" width="50px" alt=""></span>
+                 <span><img src="{{ article.author.profile_picture }}" height="25px" width="25px" alt=""></span>
                 {% else %}
                 {{ article.author }}
 
