--- a/templates/profiles/trainer/complete-profile.html
+++ b/templates/profiles/trainer/complete-profile.html
@@ -21,7 +21,9 @@
 
             {% csrf_token %}
         </form>
-        <button type="submit" form="trainer-complete-profile-form">Create Profile</button>
+            <div class="workout-modal-btns">
+                <button class="btn btn-outline-light" style="color:black" type="submit" form="trainer-complete-profile-form"><a>Create Profile</a></button>
+            </div>
         </div>
     </div>
 </div>
