--- a/templates/index.html
+++ b/templates/index.html
@@ -25,6 +25,7 @@
 {#        TODO: think about a footer menu  #}
 {#    </footer>#}
 <script src="{% static 'scripts/indexImageBlur.js' %}"></script>
+<script src="{% static 'scripts/buttons.js' %}"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js" integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V" crossorigin="anonymous"></script>
 <script src="https://kit.fontawesome.com/fbab65fcce.js" crossorigin="anonymous"></script>
