--- a/templates/profiles/account/update-personal.html
+++ b/templates/profiles/account/update-personal.html
@@ -7,22 +7,27 @@
     <div class="form-container">
     <div class="update-personal-info">
         <form action="{% url 'user update personal' request.user.pk %}" method="post">
-{% include 'partials/field-errors-alert.html' %}
-            <label for="">First name: </label><p>{{ form.first_name }}</p>
-            <label for="">Last name: </label><p>{{ form.last_name }}</p>
-            <label for="">Username: </label><p>{{ form.username }}</p>
-            <label for="">Location: </label><p>{{ form.location }}</p>
-            <label for="">Profile picture URL: </label><p>{{ form.profile_picture }}</p>
-            <button>Update Profile</button>
+            <div class="form-fields">
+                {% include 'partials/field-errors-alert.html' %}
+                <label for="">First name: </label><p>{{ form.first_name }}</p>
+                <label for="">Last name: </label><p>{{ form.last_name }}</p>
+                <label for="">Username: </label><p>{{ form.username }}</p>
+                <label for="">Location: </label><p>{{ form.location }}</p>
+                <label for="">Profile picture URL: </label><p>{{ form.profile_picture }}</p>
+
+            </div>
+            <div class="workout-modal-btns">
+                <button class="btn btn-outline-light" style="color:black"><a>Update Profile</a></button>
+                <button class="btn btn-outline-light" style="color:black">
+                    {% if request.user.trainerprofile %}
+                    <a href="{% url 'trainer profile details' request.user.trainerprofile.pk %}">
+                    {% elif request.user.traineeprofile %}
+                    <a href="{% url 'trainee profile details' request.user.traineeprofile.pk %}">
+                    {% endif %}
+                        Back to my profile</a>
+                </button>
+            </div>
             {% csrf_token %}
-            <button>
-                {% if request.user.trainerprofile %}
-                <a href="{% url 'trainer profile details' request.user.trainerprofile.pk %}">
-                {% elif request.user.traineeprofile %}
-                <a href="{% url 'trainee profile details' request.user.traineeprofile.pk %}">
-                {% endif %}
-                    Back to my profile</a>
-            </button>
         </form>
     </div>
     </div>
