--- a/templates/profiles/trainee/profile-details.html
+++ b/templates/profiles/trainee/profile-details.html
@@ -25,90 +25,92 @@
         </div>
     </div>
     <div class="dashboard-content">
-    <div>
-        <h1>Latest workouts</h1>
-        {% if last_workouts %}
-        <div class="accordion" id="accordionPanelsStayOpenExample">
+        <div class="personal-goals">
+            <h1>Goals:</h1>
+            <table class="table">
+                <thead>
+                    <tr>
+                        <th>Goal name</th>
+                        <th>Completed</th>
+                        <th>Date added</th>
+                        <th>Date finished</th>
+                        <th>Mark as completed</th>
+                    </tr>
+                </thead>
+                {% for goal in goals %}
+                    <tr>
+                        <td>{{ goal.goal_name }}</td>
+                        {% if goal.is_accomplished %}
+                        <td style="justify-content: center; display:flex; font-size:24px"><i class="fa-solid fa-square-check" style="color:green"> </i></td>
+                        {% else %}
+                        <td style="justify-content: center; display:flex; font-size:24px"><i class="fa-solid fa-square-xmark" style="color: red"></i></td>
+                        {% endif %}
+                        <td>{{ goal.date_added }}</td>
+                        <td>{{ goal.date_finished }}</td>
+                        <td style="justify-content: center; display:flex; font-size:24px">{% if not goal.is_accomplished %} <input type="radio"> {% endif %}</td>
+                    </tr>
+                {% endfor %}
+                <tr>
+                    <td><a href="{% url 'create custom goal' %}">Add a new goal</a></td>
+                </tr>
+            </table>
 
-          <div class="accordion-item">
-            <h2 class="accordion-header" id="panelsStayOpen-headingOne">
-              <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true" aria-controls="panelsStayOpen-collapseOne">
-                <h4>{{ last_workout_one.name }}</h4> / ({{ last_workout_one.duration }} minutes)
-              </button>
-            </h2>
-            <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show" aria-labelledby="panelsStayOpen-headingOne">
-              <div class="accordion-body">
-                <strong>This is the first item's accordion body.</strong> It is shown by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
-              </div>
-            </div>
-          </div>
-
-            {% if last_workout_two %}
-          <div class="accordion-item">
-            <h2 class="accordion-header" id="panelsStayOpen-headingTwo">
-              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false" aria-controls="panelsStayOpen-collapseTwo">
-                <h4>{{ last_workout_two.name }}</h4> / ({{ last_workout_two.duration }} minutes)
-              </button>
-            </h2>
-            <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingTwo">
-              <div class="accordion-body">
-                <strong>This is the second item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
-              </div>
-            </div>
-          </div>
-            {% endif %}
-
-            {% if  last_workout_three %}
-          <div class="accordion-item">
-            <h2 class="accordion-header" id="panelsStayOpen-headingThree">
-              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseThree" aria-expanded="false" aria-controls="panelsStayOpen-collapseThree">
-                <h4>{{ last_workout_three.name }}</h4> / ({{ last_workout_three.duration }} minutes)
-              </button>
-            </h2>
-            <div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingThree">
-              <div class="accordion-body">
-                <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
-              </div>
-            </div>
-          </div>
         </div>
+        <div class="latest-workouts">
+            <h1>Latest workouts</h1>
+            {% if last_workouts %}
+            <div class="accordion" id="accordionPanelsStayOpenExample">
+
+              <div class="accordion-item">
+                <h2 class="accordion-header" id="panelsStayOpen-headingOne">
+                  <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true" aria-controls="panelsStayOpen-collapseOne">
+                    <h4>{{ last_workout_one.name }}</h4> / ({{ last_workout_one.duration }} minutes)
+                  </button>
+                </h2>
+                <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show" aria-labelledby="panelsStayOpen-headingOne">
+                  <div class="accordion-body">
+                    <strong>This is the first item's accordion body.</strong> It is shown by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                  </div>
+                </div>
+              </div>
+
+                {% if last_workout_two %}
+              <div class="accordion-item">
+                <h2 class="accordion-header" id="panelsStayOpen-headingTwo">
+                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false" aria-controls="panelsStayOpen-collapseTwo">
+                    <h4>{{ last_workout_two.name }}</h4> / ({{ last_workout_two.duration }} minutes)
+                  </button>
+                </h2>
+                <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingTwo">
+                  <div class="accordion-body">
+                    <strong>This is the second item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                  </div>
+                </div>
+              </div>
+                {% endif %}
+
+                {% if  last_workout_three %}
+              <div class="accordion-item">
+                <h2 class="accordion-header" id="panelsStayOpen-headingThree">
+                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseThree" aria-expanded="false" aria-controls="panelsStayOpen-collapseThree">
+                    <h4>{{ last_workout_three.name }}</h4> / ({{ last_workout_three.duration }} minutes)
+                  </button>
+                </h2>
+                <div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingThree">
+                  <div class="accordion-body">
+                    <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                  </div>
+                </div>
+              </div>
+            </div>
+                {% endif %}
+
+            {% else %}
+                <h2>You don't have any workouts yet</h2>
             {% endif %}
-
-        {% else %}
-            <h2>You don't have any workouts yet</h2>
-        {% endif %}
-                <a href="{% url 'workout create' %}">Start a new workout now</a>
-
-    </div>
-    <div>
-        <h3>Goals:</h3>
-        <table class="table">
-            <thead>
-                <tr>
-                    <th>Goal name</th>
-                    <th>Completed</th>
-                    <th>Date added</th>
-                    <th>Date finished</th>
-                    <th>Mark as completed</th>
-                </tr>
-            </thead>
-            {% for goal in goals %}
-
-                <tr>
-                    <th>{{ goal.goal_name }}</th>
-                    {% if goal.is_accomplished %}
-                    <th style="justify-content: center; display:flex; font-size:24px"><i class="fa-solid fa-square-check" style="color:green"> </i></th>
-                    {% else %}
-                    <th style="justify-content: center; display:flex; font-size:24px"><i class="fa-solid fa-square-xmark" style="color: red"></i></th>
-                    {% endif %}
-                    <th>{{ goal.date_added }}</th>
-                    <th>{{ goal.date_finished }}</th>
-                    <th style="justify-content: center; display:flex; font-size:24px">{% if not goal.is_accomplished %} <input type="radio"> {% endif %}</th>
-                </tr>
-            {% endfor %}
-        </table>
-        <a href="{% url 'create custom goal' %}">Create goal</a>
-    </div>
+                    <a href="{% url 'workout create' %}">Start a new workout now</a>
+        </div>
+        </div>
 
     </div>
 </div>
