--- a/templates/profiles/trainer/view-for-trainers/trainer-details.html
+++ b/templates/profiles/trainer/view-for-trainers/trainer-details.html
@@ -26,14 +26,19 @@
   </div>
 </div>
     <div class="dashboard-content">
-        <div class="">
+        <div class="prime-membership-status">
             {% if request.user.trainerprofile.prime_membership %}
-               <h3 style="color:green"> Active Partner Membership <i class="fa-solid fa-award"></i> </h3>
+               <h3 style="color:green"> Active Partner Membership <i class="fa-solid fa-award"></i> / <a href="{% url 'manage prime' request.user.trainerprofile.pk%}" id="prime-deactivate">deactivate</a></h3>
             {% else %}
-                <h3>Upgrade to Partner Membership</h3>
+                <h3><a href="{% url 'manage prime' request.user.trainerprofile.pk%}">Upgrade to Partner Membership</a></h3>
             {% endif %}
         </div>
-
+        <div class="my-content">
+            My latest articles
+        </div>
+        <div class="profile-stats">
+            Statistics
+        </div>
     </div>
 </div>
 {% endblock %}
