--- a/templates/content/articles/create-article.html
+++ b/templates/content/articles/create-article.html
@@ -13,8 +13,9 @@
             <label for="">Categories:</label><p>{{ form.category }}</p>
             <label for="">Abstract</label><p>{{ form.abstract }}</p>
             <label for="">Body</label><p>{{ form.body }}</p>
-
-        <button>Submit Article</button>
+        <div class="workout-modal-btns">
+            <button class="btn btn-outline-light" style="color:black"><a>Submit Article</a></button>
+        </div>
         {% csrf_token %}
         </form>
     </div>
