--- a/templates/profiles/trainee/update-profile.html
+++ b/templates/profiles/trainee/update-profile.html
@@ -5,15 +5,17 @@
 <div class="container">
     <h1 class="form-page-header">@{{ request.user }}</h1>
     <div class="form-container">
-        <div class="trainee-update-profile-form">
+        <div class="trainee-update-profile-form form-inner">
             <form action="{% url 'trainee update profile' request.user.traineeprofile.pk%}" method="post">
                 {% include 'partials/field-errors-alert.html' %}
                 <label for="">Height: </label><p>{{ form.height }} cm</p>
                 <label for="">Weight: </label><p>{{ form.weight }} kg</p>
                 <label for="">Experience level: </label><p>{{ form.experience }}</p>
                 <label for="">Goals: </label><p>{{ form.goals }}</p>
-                <button>Update Profile</button>
-                <button><a href="{% url 'trainee profile details' request.user.traineeprofile.pk %}">Back to my profile</a></button>
+                <div class="workout-modal-btns">
+                    <button class="btn btn-outline-light" style="color:black"><a>Update Profile</a></button>
+                    <button class="btn btn-outline-light"><a href="{% url 'trainee profile details' request.user.traineeprofile.pk %}">Back to my profile</a></button>
+                </div>
                 {% csrf_token %}
             </form>
         </div>
