--- a/templates/content/articles/article.html
+++ b/templates/content/articles/article.html
@@ -14,7 +14,7 @@
       <p class="card-text"><small class="text-muted">{{ article.publication_date|date:'d M y' }}</small></p>
       <p class="card-text"><small class="text-muted">
           {% if article.author.trainerprofile %}
-              <a href="{% url 'trainer details' pk=article.author.trainerprofile.pk %}">{{ article.author }}
+              <a href="{% url 'trainer details' slug=article.author.trainerprofile.slug %}">{{ article.author }}
                 {% if article.author.trainerprofile.prime_membership %}
                         <i class="fa-solid fa-award" style="color:green"></i>
                     {% endif %}
