--- a/templates/partials/nav.html
+++ b/templates/partials/nav.html
@@ -15,7 +15,7 @@
 
             {% if request.user.trainerprofile %}
                 <li><a href="">My Trainees</a></li>
-                <li><a href="{% url 'trainer profile details' request.user.trainerprofile.pk %}">
+                <li><a href="{% url 'trainer profile details' slug=request.user.trainerprofile.slug %}">
                     <img src="{{ request.user.profile_picture }}" alt="" width="40px" height="40px">
                     {{ request.user }}
                 </a></li>
@@ -23,7 +23,7 @@
             {% elif request.user.traineeprofile %}
                 <li><a href="{% url 'trainers list' %}">Find a coach</a></li>
                 <li><a href="{% url 'workouts list' %}">My Workouts</a></li>
-                <li><a href="{% url 'trainee profile details' request.user.traineeprofile.pk %}">
+                <li><a href="{% url 'trainee profile details' slug=request.user.traineeprofile.slug %}">
                     <img src="{{ request.user.profile_picture }}" alt="" width="40px" height="40px">
                     {{ request.user }}
                 </a></li>
