--- a/templates/content/articles/articles-list.html
+++ b/templates/content/articles/articles-list.html
@@ -3,7 +3,7 @@
 {% load content_filters %}
 
 {% block page_content %}
-    {% if articles %}
+
 {#    TODO: put a carousel eventually #}
 
 <div class="container">
@@ -12,6 +12,7 @@
             <h2>Write an article <a href="{% url 'article create' %}">here</a></h2>
         </div>
     {% endif %}
+    {% if articles %}
     {% for article in articles %}
         <div class="col-5 mt-3 regular-article">
             <div class="card">
@@ -21,7 +22,7 @@
                       {% endfor %}
               </div>
               <div class="card-body">
-                <h3 class="card-title article-heading"><a href="{% url 'article details' pk=article.pk %}">{{ article.heading|capitalize_each_word }}</a></h3>
+                <h3 class="card-title article-heading"><a href="{% url 'article details' slug=article.slug %}">{{ article.heading|capitalize_each_word }}</a></h3>
                 <p class="card-text">{{ article.abstract }} plus some additional text and lorem ipsum that is
                 supposed to take some extra text</p>
                   <div style="display:flex; justify-content: center">
@@ -31,21 +32,21 @@
               <div class="card-footer text-muted">
                 {{ article.publication_date|date:'d M y' }}
               </div>
-            <div class="card-footer text-muted">
-                {% if article.author.trainerprofile %}
-                <a href="{% url 'trainer details' pk=article.author.trainerprofile.pk %}"> {{ article.author }}</a>
-                {% if article.author.trainerprofile.prime_membership %}
-                    <i class="fa-solid fa-award" style="color:green"></i>
-                {% endif %}
-                 <span><img src="{{ article.author.profile_picture }}" height="25px" width="25px" alt=""></span>
-                {% else %}
-                {{ article.author }}
+                <div class="card-footer text-muted">
+                    {% if article.author.trainerprofile %}
+                    <a href="{% url 'trainer details' slug=article.author.trainerprofile.slug %}"> {{ article.author }}</a>
+                    {% if article.author.trainerprofile.prime_membership %}
+                        <i class="fa-solid fa-award" style="color:green"></i>
+                    {% endif %}
+                     <span><img src="{{ article.author.profile_picture }}" height="25px" width="25px" alt=""></span>
+                    {% else %}
+                    {{ article.author }}
 
-                {% endif %}
-            </div>
+                    {% endif %}
+                </div>
             </div>
         </div>
-{% endfor %}
+    {% endfor %}
 {#        {% if not 'filter' in request.path %}#}
             {% include 'partials/custom_paginator.html' %}
 {#        {% endif %}#}
