--- a/templates/content/exercises/custom/my-exercises.html
+++ b/templates/content/exercises/custom/my-exercises.html
@@ -18,9 +18,9 @@
                     Type: {{ exercise.type }}
                 </p>
               </div>
-              <button><a href="{% url 'custom exercise details' pk=exercise.pk %}">Details</a>
+              <button><a href="{% url 'custom exercise details' slug=exercise.slug %}">Details</a>
                   {% if request.user.pk == exercise.owner.pk %}
-                  <a href="{% url 'custom exercise update' pk=exercise.pk %}"> / Edit</a>
+                  <a href="{% url 'custom exercise update' slug=exercise.slug %}"> / Edit</a>
                   {% endif %}
               </button>
     {#          TODO: create the add to favorites mechanism      #}
