--- a/templates/content/locations/gyms.html
+++ b/templates/content/locations/gyms.html
@@ -26,7 +26,7 @@
                         <p class="card-text"><small class="text-muted">Location: </small>{{ gym.location }}</p>
                         <p class="card-text"><small class="text-muted">Open: </small>{{ gym.get_working_hours }}</p>
                           <p><small class="text-muted">Sport available: </small>{% for sport in gym.sports_available.all %} {{ sport.sport_name }} |{% endfor %}</p>
-                          <button class="btn btn-outline-light gym-details-btn"><a href="{% url 'gym details' pk=gym.pk %}">See more</a></button>
+                          <button class="btn btn-outline-light gym-details-btn"><a href="{% url 'gym details' slug=gym.slug %}">See more</a></button>
                       </div>
                     </div>
                   </div>
