--- a/templates/profiles/trainee/profile-delete.html
+++ b/templates/profiles/trainee/profile-delete.html
@@ -3,10 +3,10 @@
 
 {% block page_content %}
 Are you sure you want to permanently delete your account?
-    <form action="{% url 'trainee profile delete' request.user.traineeprofile.pk %}" method="post">
+    <form action="{% url 'trainee profile delete' slug=request.user.traineeprofile.slug %}" method="post">
     {{ form }}
         <input type="submit" value="Confirm">
-        <button><a href="{% url 'trainee profile details' request.user.traineeprofile.pk %}">Back to my profile</a></button>
+        <button><a href="{% url 'trainee profile details' slug=request.user.traineeprofile.slug %}">Back to my profile</a></button>
     {% csrf_token   %}
     </form>
 
