--- a/templates/profiles/trainee/update-profile.html
+++ b/templates/profiles/trainee/update-profile.html
@@ -6,7 +6,7 @@
     <h1 class="form-page-header">@{{ request.user }}</h1>
     <div class="form-container">
         <div class="trainee-update-profile-form form-inner">
-            <form action="{% url 'trainee update profile' request.user.traineeprofile.pk%}" method="post">
+            <form action="{% url 'trainee update profile' slug=request.user.traineeprofile.slug %}" method="post">
                 {% include 'partials/field-errors-alert.html' %}
                 <label for="">Height: </label><p>{{ form.height }} cm</p>
                 <label for="">Weight: </label><p>{{ form.weight }} kg</p>
@@ -14,7 +14,7 @@
                 <label for="">Goals: </label><p>{{ form.goals }}</p>
                 <div class="workout-modal-btns">
                     <button class="btn btn-outline-light" style="color:black"><a>Update Profile</a></button>
-                    <button class="btn btn-outline-light"><a href="{% url 'trainee profile details' request.user.traineeprofile.pk %}">Back to my profile</a></button>
+                    <button class="btn btn-outline-light"><a href="{% url 'trainee profile details' slug=request.user.traineeprofile.slug %}">Back to my profile</a></button>
                 </div>
                 {% csrf_token %}
             </form>
