--- a/templates/profiles/trainer/view-for-trainees/all-trainers.html
+++ b/templates/profiles/trainer/view-for-trainees/all-trainers.html
@@ -20,7 +20,7 @@
         ">
 
         <div class="col-md-4 trainer-avatar">
-            <a href="{% url 'trainer details' pk=trainer.pk %}">
+            <a href="{% url 'trainer details' slug=trainer.slug %}">
                 <img src="{{ trainer.profile.profile_picture }}" class="img-fluid rounded-start" alt="...">
                 <h3>{{ trainer.training_field }}</h3>
             </a>
@@ -42,7 +42,7 @@
             <p class="card-text"><small class="text-muted">Years of experience:</small> {{ trainer.years_experience }}</p>
 
               <p><small class="text-muted">Practices:</small> {% for sport in trainer.sports.all %} {{ sport.sport_name }} |{% endfor %}</p>
-              <button class="btn btn-outline-light"><a href="{% url 'trainer details' pk=trainer.pk %}">Check Biography</a></button>
+              <button class="btn btn-outline-light"><a href="{% url 'trainer details' slug=trainer.slug %}">Check Biography</a></button>
           </div>
         </div>
       </div>
