--- a/templates/profiles/trainer/view-for-trainers/trainer-details.html
+++ b/templates/profiles/trainer/view-for-trainers/trainer-details.html
@@ -21,16 +21,16 @@
 
   </ul>
   <div class="card-body">
-    <a href="{% url 'trainer update profile' request.user.trainerprofile.pk %}" class="card-link">Edit Profile</a>
-    <a href="{% url 'trainer profile delete' request.user.trainerprofile.pk %}" class="card-link">Delete Account</a>
+    <a href="{% url 'trainer update profile' slug=request.user.trainerprofile.slug %}" class="card-link">Edit Profile</a>
+    <a href="{% url 'trainer profile delete' slug=request.user.trainerprofile.slug %}" class="card-link">Delete Account</a>
   </div>
 </div>
     <div class="dashboard-content">
         <div class="prime-membership-status">
             {% if request.user.trainerprofile.prime_membership %}
-               <h3 style="color:green"> Active Partner Membership <i class="fa-solid fa-award"></i> / <a href="{% url 'manage prime' request.user.trainerprofile.pk%}" id="prime-deactivate">deactivate</a></h3>
+               <h3 style="color:green"> Active Partner Membership <i class="fa-solid fa-award"></i> / <a href="{% url 'manage prime' slug=request.user.trainerprofile.slug %}" id="prime-deactivate">deactivate</a></h3>
             {% else %}
-                <h3><a href="{% url 'manage prime' request.user.trainerprofile.pk%}">Upgrade to Partner Membership</a></h3>
+                <h3><a href="{% url 'manage prime' slug=request.user.trainerprofile.slug %}">Upgrade to Partner Membership</a></h3>
             {% endif %}
         </div>
         <div class="my-content">
