--- a/templates/profiles/trainee/profile-details.html
+++ b/templates/profiles/trainee/profile-details.html
@@ -56,6 +56,7 @@
                     </tr>
                 {% endfor %}
                 <tr>
+                    <td><a href="{% url 'manage goals' %}">Manage Goals</a></td>
                     <td><a href="{% url 'create custom goal' %}">Add a new goal</a></td>
                 </tr>
             </table>
@@ -63,14 +64,6 @@
         </div>
 
 
-
-        <div>
-            <form method="post" action="/">
-                {{ formset }}
-                {% csrf_token %}
-                <input type="submit" name="Submit">
-            </form>
-        </div>
 
 
 
