Form and formset in one page is funally working
After many days it is finally done..
'Manage goals' page now has the ability to add a goal and edit old goals in a formset.

--- a/templates/content/custom_goal/manage-goals.html
+++ b/templates/content/custom_goal/manage-goals.html
@@ -3,9 +3,17 @@
 
 {% block page_content %}
     <form action="{% url 'manage goals' %}" method="post">
-        {{ form }}
+        {{ formset }}
         {% csrf_token %}
-        <input type="submit" name="submit">
+
+
+        <input type="submit">
+    </form>
+
+    <form action="" method="POST">
+        {{ create_form }}
+        {% csrf_token %}
+        <input type="submit">
     </form>
     <a href="{% url 'create custom goal' %}">Add a new goal</a>
 {% endblock %}
