--- a/templates/profiles/trainee/profile-details.html
+++ b/templates/profiles/trainee/profile-details.html
@@ -1,4 +1,5 @@
 {% extends 'index.html' %}
+{% load content_filters %}
 {% load static %}
 
 {% block page_content %}
@@ -46,13 +47,9 @@
                         {% else %}
                         <td style="justify-content: center; display:flex; font-size:24px"><i class="fa-solid fa-square-xmark" style="color: red"></i></td>
                         {% endif %}
-                        <td>{{ goal.date_added }}</td>
-                        <td>{{ goal.date_finished }}</td>
-                        <td>{% if not goal.is_accomplished %}
-{#                            <input type="radio">#}
-                            <button>Mark as completed</button>
-                        {% endif %}</td>
-                    <td><button>Delete</button></td>
+                        <td>{{ goal.date_added|date_convert }}</td>
+                        <td>{{ goal.date_finished|date_convert }}</td>
+
                     </tr>
                 {% endfor %}
                 <tr>
