Goal Management Styles
The goal management panel got some nice improvements. The create goal form now shows in a modal if the client wants to add a new one.

To do:
- make the container responsive.
- add sorting options.
- add some statistics

--- a/staticfiles/styles/utils/forms.css
+++ b/staticfiles/styles/utils/forms.css
@@ -4,7 +4,7 @@ form {
     border: black 3px solid;
 }
 .form-container{
-    max-width: 900px;
+    max-width: 1100px;
     display:flex;
     justify-content: center;
     flex-direction: column;
@@ -40,4 +40,8 @@ form label{
 
 .exercise-form {
     width: 700px;
+}
+
+.goal-management-form-container {
+    width:1200px;
 }
